# mcp-action-firewall

./: .gitignore  Dockerfile  LICENSE  README.md  demo.py  glama.json  pyproject.toml
src/mcp_action_firewall/: __init__.py  __main__.py  default_config.json  policy.py  proxy.py  server.py  state.py
tests/: test_policy.py  test_proxy.py  test_state.py
