[project]
name = "mcp-action-firewall"
version = "0.1.0"
description = "A transparent MCP proxy that intercepts dangerous tool calls and requires OTP-based user approval."
authors = [{name = "Bakir Talibov"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["mcp", "firewall", "security", "ai-safety", "tool-calls"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mcp-action-firewall = "mcp_action_firewall.server:main"

[project.urls]
Homepage = "https://github.com/starskrime/mcp-action-firewall"
Repository = "https://github.com/starskrime/mcp-action-firewall"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_action_firewall"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
